--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
+    "classnames": "^2.2.6",
     "next": "10.0.5",
+    "postcss": "^8.2.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-csv-downloader": "^2.2.0",
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.12.1",
+    "tailwindcss": "^2.0.3"
   }
 }
